--- a/BullsEye/Base.lproj/Main.storyboard
+++ b/BullsEye/Base.lproj/Main.storyboard
@@ -102,6 +102,10 @@
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="slider" destination="qLB-ru-kN7" id="ELi-jF-2Td"/>
+                        <outlet property="targetLabel" destination="lWJ-qN-0Ul" id="WXp-Yi-Znc"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
